[project]
name = "audiostat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lucas-nelson-uiuc", email = "lucas.nelson.uiuc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.14.10",
    "polars>=1.31.0",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
